crates/lang/macro/tests/ui/trait_def/fail/definition_assoc_type.stderr
error: associated types in ink! trait definitions are not supported, yet
 --> $DIR/definition_assoc_type.rs:5:5
  |
5 |     type InvalidAssocType;
  |     ^^^^^^^^^^^^^^^^^^^^^^
